# pythongm

./: .flake8  .gitattributes  .gitignore  ALL_EXPORTERS_UPDATED_2025-11-14.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_EDITOR_FEATURE.md  CODE_EDITOR_IMPLEMENTATION.md  COMPLETE_EVENTS_ACTIONS_LIST.md  EXE_DEPENDENCY_CHECK_FIX.md  EXE_EXPORTER_CODE_COMPARISON.md  EXE_EXPORTER_KIVY_REWRITE.md  EXE_EXPORT_QUICK_REFERENCE.md  EXE_EXTENSION_FIX.md  EXE_MEMORY_ISSUE.md  FRENCH_TRANSLATION_COMPLETE.md  GAMEMAKER_7_IMPLEMENTATION_COMPLETE.md  GAMEMAKER_COMPLIANCE_ANALYSIS.md  GERMAN_ITALIAN_TRANSLATIONS_COMPLETE.md  GM80_COMPLETE_ACTION_SYSTEM.md  GM80_EVENTS_ACTIONS_IMPLEMENTATION.md  GM80_GRID_MOVEMENT_REDESIGN.md  GM80_GRID_OVERSHOOT_FINAL_FIX.md  GM80_INTEGRATION_COMPLETE.md  GM80_TREE_EXPANSION_FIX.md  GM80_UI_INTEGRATION_SUMMARY.md  INPUT_EVENTS_COMPLETE_SUMMARY.md  KEYBOARD_MOUSE_EVENTS_INTEGRATED.md  KIVY_PERFORMANCE_FIX_2025-11-14.md  KIVY_PERFORMANCE_OPTIMIZATIONS.md  LICENSE  LICENSE-docs  MANIFEST.in  PYGAMEMAKER_COMPLETE_FILE_LIST.md  PyGameMaker-full.spec  PyGameMaker.spec  README.md  RELEASE_NOTES_v0.10.0-alpha.md  RELEASE_NOTES_v0.9.0.md  (+52 more)
.claude/: settings.json  settings.local.json
Tutorials/: index.json
actions/: __init__.py  code_actions.py  control_actions.py  core.py  draw_actions.py  extra_actions.py  gm80_actions.py  info_actions.py  main1_actions.py  main2_actions.py  move_actions.py  particles_actions.py  resources_actions.py  rooms_actions.py  score_actions.py  thymio_actions.py  timing_actions.py
chm_extracted/: #IDXHDR  #STRINGS  #SYSTEM  #TOPICS  #URLSTR  #URLTBL  $FIftiMain
config/: blockly_config.py  blockly_translations.py  editions.py
core/: __init__.py  asset_manager.py  event_system.py  ide_exporters.py  ide_window.py  ide_window.py.bak  language_manager.py  logger.py  project_manager.py
dialogs/: __init__.py  _block_config_dialog_base.py  about.py  asset_import.py  auto_save_dialog.py  blockly_config_dialog.py  export_dialogs.py  find_replace_dialog.py  import_asset.py  import_dialogs.py  key_selector_dialog.py  mouse_event_selector_dialog.py  new_project.py  object_dialogs.py  preferences.py  preferences_dialog.py  project_dialogs.py  room_dialogs.py  sprite_dialogs.py  sprite_strip_dialog.py  thymio_action_selector.py  thymio_config_dialog.py  thymio_event_selector.py
docs/: ALARM_SYSTEM_IMPLEMENTATION.md  ANDROID_EXPORT.md  BUILDING.md  (+72 more)
(+1804 files in other folders)
